# officernd-api-lib

./: .gitignore  mypy.ini  pyproject.toml  requirements.txt
src/officerndapilib/: __init__.py  exceptions.py  queries.py  reqs.py  schema.py
src/tests/: test_booking_validations.py  test_bookings.py  test_members.py  test_resource.py  test_resources.py
