[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "officerndapilib"
version = "0.0.1"
authors = [
    { name="Gibran Dar", email="gibrandar@gmail.com" }
]
description = "A thin wrapper around the OfficeRnD API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "requests>=2.31.0",
    "python_dotenv==1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/GibranDar/officernd-api-lib"
"Bug Tracker" = "https://github.com/GibranDar/officernd-api-lib/issues"

